# openglstuff

./: CMakeLists.txt  README.md  bablu  babulopengl  babulopengl.cpp  compilation_cmds  compile.sh  glad.c  main  main.cpp  main1  main1.cpp  main1.exec  shader.frag
src/: babulopengl.cpp  shader.vs
